--- a/front/src/pages/Profile/profile.css
+++ b/front/src/pages/Profile/profile.css
@@ -1,12 +1,13 @@
-.container{
+.container {
     display: flex;
     background-color: #f8f8f8;
-    border-radius:  5px;
-    padding: 0.8;
+    border-radius: 5px;
+    padding: 0.8em;
     align-items: center;
     margin-bottom: 1em;
 }
-.label-avatar{
+
+.label-avatar {
     width: 280px;
     height: 280px;
     display: flex;
@@ -14,46 +15,59 @@
     align-items: center;
     flex-direction: column;
     cursor: pointer;
+    position: relative;
 }
 
-.label-avatar input{
+.label-avatar input {
     display: none;
-
 }
-.label-avatar span{
+
+.label-avatar span {
     z-index: 99;
     position: absolute;
     opacity: 0.7;
     transition: all 0.5s;
 }
-.label-avatar span:hover{
+
+.label-avatar span:hover {
     opacity: 1;
-    transform: scale(1.4)
+    transform: scale(1.4);
 }
-.form-profile img{
+
+.form-profile img {
     margin-bottom: 1em;
-    border-radius:50% ;
-object-fit: cover;
+    border-radius: 50%;
+    object-fit: cover;
+    width: 250px;
+    height: 250px;
 }
-.form-profile label{
+
+.form-profile label {
     margin-bottom: 0.5em;
-    font-size: 1.4;
+    font-size: 1.4em;
 }
-.form-profile input, textarea, select{
+
+.form-profile input, 
+textarea, 
+select {
     margin-bottom: 1em;
-    padding: 0.7;
+    padding: 0.7em;
     border: 0;
     border-radius: 5px;
     max-width: 600px;
+    width: 100%;
 }
 
-.form-profile input:disabled{
-    cursor: not-allowed;  
+.form-profile input:disabled {
+    cursor: not-allowed;
 }
-.form-profile button{
+
+.form-profile button {
     max-width: 600px;
+    width: 100%;
 }
-.logout-btn{
+
+.logout-btn {
     padding: 8px 20px;
     border: 1px solid;
     background-color: transparent;
@@ -61,4 +75,5 @@ object-fit: cover;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
