--- a/front/src/components/Header/header.css
+++ b/front/src/components/Header/header.css
@@ -4,23 +4,24 @@
     padding: 0;
     background-color: #181c2e;
     position: fixed;
-    overflow: auto;
     height: 100%;
-
-}
-
-.sidebar div{
+    overflow: auto;
+  }
+  
+  .sidebar div{
     background: url('../../assets/cover.png');
     background-color: #181c2e;
     background-position: center;
-    background-size: cover;
     background-repeat: no-repeat;
-}
-
-.sidebar div{
+    background-size: cover;
+    height: 150px;
+  }
+  
+  .sidebar div{
     padding-top: 30px;
-}
-.sidebar div img{
+  }
+  
+  .sidebar div img {
     width: 90px;
     height: 90px;
     display: block;
@@ -29,57 +30,65 @@
     object-fit: cover;
     filter: drop-shadow(2px 3px 6px #121212);
     -webkit-filter: drop-shadow(2px 3px 6px #121212);
-}
-
-.sidebar a{
+  }
+  
+  .sidebar a {
     display: block;
-    display: flex;
     padding: 16px;
+    display: flex;
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255,255,255, 0.7);
     flex-direction: row;
     align-items: center;
-    transition: ease-in-out 0.4;
-    
-}
-.sidebar a svg{
+    transition: ease-in-out 0.4s;
+  }
+  
+  .sidebar a svg{
     margin-right: 0.5rem;
-}
-.sidebar a:hover{
+  }
+  
+  .sidebar a:hover{
     background-color: #121212;
-    color: #fff;
-}
-
-.content{
+    color: #FFF;
+  }
+  
+  .content{
     margin-left: 200px;
     padding: 1px 16px;
-}
-@media screen and (max-width:700px){
+  }
+  
+  @media screen and (max-width: 700px){
     .sidebar{
-        width: 100%;
-        height: auto;
-        position: relative;
+      width: 100%;
+      height: auto;
+      position: relative;
     }
+  
     div.content{
-        margin-left: 0;
+      margin-left: 0;
     }
+  
     .sidebar a{
-        float: left;
+      float: left;
     }
+  
     .sidebar div{
-        display: none;
+      display: none;
     }
+  
     .sidebar a svg{
-        display: none;
+      display: none;
     }
-}
-
-@media screen and (max-width: 400px){
+  }
+  
+  
+  @media screen and (max-width: 400px){
     .sidebar a{
-        text-align: center;
-        float: none;
+      text-align: center;
+      float: none;
     }
+    
     .sidebar a svg{
-        display: none;
+      display: none;
     }
-}
+  }
