--- a/front/src/pages/Profile/profile.css
+++ b/front/src/pages/Profile/profile.css
@@ -42,38 +42,34 @@
     height: 250px;
 }
 
-.form-profile label {
+.form-profile label{
     margin-bottom: 0.5em;
     font-size: 1.4em;
-}
-
-.form-profile input, 
-textarea, 
-select {
+  }
+  
+  .form-profile input, textarea, select{
     margin-bottom: 1em;
     padding: 0.7em;
-    border: 0;
+    border:0;
     border-radius: 5px;
     max-width: 600px;
-    width: 100%;
-}
-
-.form-profile input:disabled {
+  }
+  
+  .form-profile input:disabled{
     cursor: not-allowed;
-}
-
-.form-profile button {
+  }
+  
+  .form-profile button{
     max-width: 600px;
-    width: 100%;
-}
-
-.logout-btn {
+  }
+  
+  .logout-btn{
     padding: 8px 20px;
-    border: 1px solid;
+    border: 1px solid #121212;
     background-color: transparent;
     border-radius: 5px;
+    font-size: 1.5em;
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
-}
+  }
