--- a/front/src/pages/Profile/profile.css
+++ b/front/src/pages/Profile/profile.css
@@ -65,7 +65,7 @@
   
   .logout-btn{
     padding: 8px 20px;
-    border: 1px solid #121212;
+    border: 1px solid #1F112A;
     background-color: transparent;
     border-radius: 5px;
     font-size: 1.5em;
