--- a/front/src/pages/Dashboard/dashboard.css
+++ b/front/src/pages/Dashboard/dashboard.css
@@ -88,7 +88,7 @@
   .btn-more{
     margin: 1.5em 0;
     padding: 0.5em 1em;
-    background-color: #181c2e;
+    background-color: #1F112A;
     border:0;
     border-radius: 5px;
     font-size: 1.1em;
