--- a/front/src/pages/SignIn/signin.css
+++ b/front/src/pages/SignIn/signin.css
@@ -1,66 +1,108 @@
-.container-center{
-    height: 100%;
+/* src/components/signin.css */
+
+.container-center {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #121212;
-    padding: 0 12px;
-}
-.login{
-    background-color: #eaeaec;
-    width: 600px;
+    height: 100vh;
+    width: 100vw;
+    background-color: #f0f0f0;
+  }
+  
+  .login {
+    flex: 1;
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
-}
-.login-area{
-    background-color: #181c2e;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: #fefefe;
+  }
+  
+  .login-area img {
+    width: 150px; /* Ajuste conforme necessário */
+    margin-bottom: 20px;
+  }
+  
+  form {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-.login-area img{
-width: 170px;
-height: 130px;
-padding: 20px;
-}
-form{
-    margin-top: 1.5rem;
-    width: 90%;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
-
-}
-
-form h1{
-    text-align: center;
-    margin-bottom: 1rem;
-    color: #181c2e;
-}
-.login input{
-    margin-bottom: 1rem;
-    height: 35px;
-    border-radius: 4px;
-    border: 0;
+    gap: 15px;
+  }
+  
+  form h1 {
+    margin-bottom: 20px;
+    color: #1F112A;
+  }
+  
+  form input {
+    width: 100%;
     padding: 10px;
-    font-size: 15px;
-    background-color: #fff;
-}
-form button{
-    height: 35px;
-    border: 0;
-    border-radius: 4px;
-    background-color: #181c2e;
-    color: #fff;
-    font-size: 1.3rem;
-}
-
-.login a{
-    margin: 1.5rem 0;
-    color: #000;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  form button {
+    padding: 10px;
+    background-color: #1F112A;
+    color: white;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
-    
-}
+  }
+  
+  form button:hover {
+    background-color: #401c47;
+  }
+  
+  .login-area,
+  form {
+    text-align: center;
+  }
+  
+  .login form a {
+    margin-top: 10px;
+    color: #1F112A;
+    text-decoration: none;
+  }
+  
+  .login form a:hover {
+    text-decoration: underline;
+  }
+  
+  .background-image {
+    flex: 0 0 70%;
+    background-image: url('../../assets/bg02.jpg'); /* Caminho para a imagem de fundo */
+    background-size: cover;
+    background-position: center;
+  }
+  
+  /* Media queries para responsividade */
+  @media (max-width: 768px) {
+    .container-center {
+      flex-direction: column;
+    }
+  
+    .background-image {
+      display: none;
+    }
+  
+    .login {
+      width: 100%;
+      max-width: 400px;
+      padding: 20px;
+      background-color: #ddd;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    form input {
+      padding: 8px;
+    }
+  
+    form button {
+      padding: 8px;
+    }
+  }
+  
